repo-gultekin/components/apache/base/apache-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache
  labels:
    app: apache
    app.kubernetes.io/name: apache
    app.kubernetes.io/component: webserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apache
  template:
    metadata:
      labels:
        app: apache
        app.kubernetes.io/name: apache
        app.kubernetes.io/component: webserver
    spec:
      containers:
      - name: apache
        image: registry.redhat.io/rhel8/httpd-24:latest
        ports:
        - containerPort: 8080
          name: http
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "500m"
        volumeMounts:
        - name: html-volume
          mountPath: /var/www/html/index.html
          subPath: index.html
      volumes:
      - name: html-volume
        configMap:
          name: apache-index-html
          defaultMode: 420
