repo-gultekin/components/apache/base/apache-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apache
  labels:
    app: apache
spec:
  selector:
    app: apache
  ports:
  - port: 80
    targetPort: http
    name: http
  type: ClusterIP
