repo-gultekin/components/apache/base/apache-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: apache-route
spec:
  to:
    kind: Service
    name: apache
  port:
    targetPort: http
